--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,13 +54,13 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Kaustubh Sharma</h1>
-            <h2>Cloud Engineer specializing in Microsoft 365, Azure, and PowerShell.</h2>
+            <h2>System Engineer specializing in Windows server, Azure, and PowerShell.</h2>
             <hr />
             <ul class="social">
-               <li><a href="https://twitter.com/JeffWBrown"><i class="fa fa-twitter-square"></i></a></li>
+              <!-- <li><a href="https://twitter.com/JeffWBrown"><i class="fa fa-twitter-square"></i></a></li> -->
                <li><a href="https://www.linkedin.com/in/kaustubh-sharma-074795114/"><i class="fa fa-linkedin-square"></i></a></li>
                <li><a href="https://github.com/kaustubh93-dev"><i class="fa fa-github-square"></i></a></li>
-               <li><a href="https://jeffbrown.tech"><i class="fa fa-cloud"></i></a></li>
+               <li><a href="https://kaustubhtech.hashnode.dev/"><i class="fa fa-cloud"></i></a></li>
             </ul>
          </div>
       </div>
@@ -177,7 +177,7 @@
                   <p class="info">Senior Technical Consultant <span>&bull;</span> <em class="date">2016 - 2018</em></p>
 
                   <p>
-                  Assist in planning, building, migrating, and deploying customers to Lync/Skype for Business and Office 365.
+                  Assist in planning, building, migrating, and deploying window server.
                   </p>
 
                </div>
