--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,6 +56,8 @@
             <h1 class="responsive-headline">Kaustubh Sharma</h1>
             <h2>System Engineer specializing in Windows server, Azure, and PowerShell.</h2>
             <hr />
+
+    <p> This page has been viewed <a id="counter"></a> times :) </p>       
             <ul class="social">
               <!-- <li><a href="https://twitter.com/JeffWBrown"><i class="fa fa-twitter-square"></i></a></li> -->
                <li><a href="https://www.linkedin.com/in/kaustubh-sharma-074795114/"><i class="fa fa-linkedin-square"></i></a></li>
